tests/ui/borrowck/issue-46471.stderr
error[E0515]: cannot return reference to local variable `x`
  --> $DIR/issue-46471.rs:3:5
   |
LL |     &x
   |     ^^ returns a reference to data owned by the current function

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0515`.
